--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,6 +15,9 @@
         <action
             android:id="@+id/action_home_to_profile"
             app:destination="@id/fragmentProfile" />
+        <action
+            android:id="@+id/action_home_to_exam"
+            app:destination="@id/fragmentExam" />
     </fragment>
 
     <fragment
@@ -24,5 +27,10 @@
     <fragment
         android:id="@+id/fragmentProfile"
         android:name="com.example.mathapp.ui.profile.ProfileFragment" />
+
+    <fragment
+        android:id="@+id/fragmentExam"
+        android:name="com.example.mathapp.ui.exam.ExamFragment" />
+
 
 </navigation>
