--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/fragmentHome"
-        android:name="com.example.mathapp.ui.lobby.HomeFragment"
+        android:name="com.example.mathapp.ui.lobby.LobbyFragment"
         tools:layout="@layout/fragment_nav">
         <action
             android:id="@+id/action_home_to_theory"
