--- a/app/src/main/res/layout/fragment_nav.xml
+++ b/app/src/main/res/layout/fragment_nav.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.lobby.LobbyFragment">
+    tools:context=".ui.dashboard.LobbyFragment">
 
     <androidx.compose.ui.platform.ComposeView
         android:id="@+id/compose_view"
