--- a/app/src/main/res/layout/fragment_score_external.xml
+++ b/app/src/main/res/layout/fragment_score_external.xml
@@ -3,11 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.score.ScoreFragment">
+    tools:context=".ui.score.external.ScoreExternalFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
 
 </FrameLayout>
