--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -43,7 +43,21 @@
         android:name="com.example.mathapp.ui.info.InfoFragment" />
     <fragment
         android:id="@+id/fragmentScore"
-        android:name="com.example.mathapp.ui.score.ScoreFragment" />
+        android:name="com.example.mathapp.ui.score.ScoreFragment" >
+        <action
+            android:id="@+id/action_fragmentScore_to_fragmentScoreInternal"
+            app:destination="@id/fragmentScoreInternal" />
+        <action
+            android:id="@+id/action_fragmentScore_to_fragmentScoreExternal"
+            app:destination="@id/fragmentScoreExternal" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/fragmentScoreInternal"
+        android:name="com.example.mathapp.ui.score.internal.ScoreInternalFragment"/>
+    <fragment
+        android:id="@+id/fragmentScoreExternal"
+        android:name="com.example.mathapp.ui.score.external.ScoreExternalFragment"/>
 
 
 </navigation>
