--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,10 +14,10 @@
             app:destination="@id/fragmentProfile" />
         <action
             android:id="@+id/action_home_to_info"
-            app:destination="@+id/fragmentInfo"/>
+            app:destination="@+id/fragmentInfo" />
         <action
             android:id="@+id/action_home_to_score"
-            app:destination="@+id/fragmentScore"/>
+            app:destination="@+id/fragmentScore" />
         <action
             android:id="@+id/action_fragmentHome_to_fragmentExam"
             app:destination="@id/fragmentExam" />
@@ -33,7 +33,7 @@
 
     <fragment
         android:id="@+id/fragmentExam"
-        android:name="com.example.mathapp.ui.exam.ExamFragment" >
+        android:name="com.example.mathapp.ui.exam.ExamFragment">
         <action
             android:id="@+id/action_fragmentExam_to_fragmentQuiz"
             app:destination="@id/fragmentQuiz" />
@@ -48,7 +48,7 @@
 
     <fragment
         android:id="@+id/fragmentScore"
-        android:name="com.example.mathapp.ui.score.ScoreFragment" >
+        android:name="com.example.mathapp.ui.score.ScoreFragment">
         <action
             android:id="@+id/action_fragmentScore_to_fragmentScoreExternal"
             app:destination="@id/fragmentScoreExternal" />
@@ -57,16 +57,23 @@
             app:destination="@id/fragmentScoreInternal" />
         <action
             android:id="@+id/action_fragmentScore_to_fragmentUnit"
-            app:destination="@id/fragmentUnit"
-            />
+            app:destination="@id/fragmentUnit" />
     </fragment>
 
     <fragment
         android:id="@+id/fragmentScoreInternal"
-        android:name="com.example.mathapp.ui.score.internal.ScoreInternalFragment"/>
+        android:name="com.example.mathapp.ui.score.internal.ScoreInternalFragment">
+        <argument
+            android:name="unit"
+            app:argType="integer" />
+    </fragment>
     <fragment
         android:id="@+id/fragmentScoreExternal"
-        android:name="com.example.mathapp.ui.score.external.ScoreExternalFragment"/>
+        android:name="com.example.mathapp.ui.score.external.ScoreExternalFragment">
+        <argument
+            android:name="unit"
+            app:argType="integer" />
+    </fragment>
 
     <fragment
         android:id="@+id/fragmentTheory"
@@ -77,8 +84,11 @@
     </fragment>
 
     <fragment
-    android:id="@+id/fragmentQuiz"
-    android:name="com.example.mathapp.ui.exam.quiz.QuizFragment">
+        android:id="@+id/fragmentQuiz"
+        android:name="com.example.mathapp.ui.exam.quiz.QuizFragment">
+        <argument
+            android:name="unit"
+            app:argType="integer" />
     </fragment>
 
     <fragment
@@ -86,6 +96,9 @@
         android:name="com.example.mathapp.ui.unit.UnitFragment">
         <argument
             android:name="score"
+            app:argType="boolean" />
+        <argument
+            android:name="scoreInternal"
             app:argType="boolean" />
         <action
             android:id="@+id/action_fragmentUnit_to_fragmentScoreInternal2"
